# Hatz.ai---RFQ-Agent---Build

./: README.md  pyproject.toml  quick-rfq-codex-hatz-build-pack-v1.0-build-summary.md  quick-rfq-codex-hatz-build-pack-v1.0.zip.sha256.txt
docs/: hatz-architecture.md  project-coverage.md  repo-audit-and-cleanup.md
docs/deployment/: deployment-checklist.md  hatz-response-next-steps.md  hatz-translation-brief.md  operations-decision-matrix.md
docs/product/: missing-info-classification-framework.md  rfq-product-framework-map.md  source-evidence-framework.md  status-decision-framework.md
docs/source-package/quick-rfq-summary-app-v1.5/: 00-readme-handoff-guide.md  01-builder-fields.md  04-qa-test-pack.md  05-qa-runner-and-patch-control.md  06-internal-pilot-playbook.md  07-pilot-summary-report-template.md  09-version-control-and-changelog-policy.md  10-rfq-intake-template.md  11-sample-inputs-and-golden-outputs.md  12-v1.5-release-notes.md  (+14 more)
evidence/: README.md
framework/agent-blueprint/: README.md  agent-manifest-template.json
notes/: hatz-agent-build-lessons.md  hatz-ai-discovery-prompt.md  hatz-manual-workflow-wiring-guide.md  hatz-raw-file-review-prompt.md  hatz-remaining-files-prompt.md  hatz-repo-pull-prompt.md  hatz-rollout-build-prompt.md  hatz-rollout-folder-read-prompt.md  hatz-token-safe-build-prompt.md  hatz-workspace-unknowns.md
rollout/: hatz-ai-quick-rfq-rollout.zip.sha256.txt
rollout/hatz-ai-quick-rfq-rollout/: READ-ME-FIRST.md  README.md
scripts/: README.md
src/hatz_quick_rfq/: __init__.py  agent.py  cli.py  models.py
tests/: test_agent.py
(+15 files in other folders)
